--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "dark+ REDUX: Even Darker",
   "icon": "logo.png",
   "description": "A redux of the Default Dark+ theme... but even darker. Minimises editor chrome and emphasises content. Nothing but bright code 😎",
-  "version": "0.0.1-alpha",
+  "version": "0.0.1",
   "publisher": "danharris",
   "homepage": "https://github.com/dan-harris/dark-plus-redux-even-darker-vscode-theme",
   "bugs": {
